# OpenSparrow

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
deploy/: docker-compose.dev.yml  docker-compose.yml  sparrow.example.yml
deploy/scripts/: generate-secrets.sh  setup.sh
docs/: DEVELOPMENT.md  STRATEGY.md  architecture.md  quickstart.md  security.md
docs/channel-setup/: slack.md  telegram.md
sparrow-agent/: Dockerfile  pyproject.toml
sparrow-agent/agent/: __init__.py  connector.py  executor.py  file_manager.py  main.py  monitor.py  sandbox.py
sparrow-agent/tests/: __init__.py  test_sandbox.py
sparrow-core/: Dockerfile  pyproject.toml
sparrow-core/sparrow/: __init__.py  config.py  main.py
sparrow-core/sparrow/agent/: __init__.py  memory.py  orchestrator.py
sparrow-core/sparrow/api/: admin.py  chat.py  files.py  health.py  tasks.py
sparrow-core/sparrow/approval/: __init__.py  engine.py  models.py  policies.py
sparrow-core/sparrow/audit/: logger.py  models.py
sparrow-core/sparrow/auth/: middleware.py  models.py  rbac.py
sparrow-core/sparrow/db/: database.py  repository.py
sparrow-core/sparrow/gateway/: __init__.py  protocol.py  router.py  telegram.py  webhook.py
sparrow-core/sparrow/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
sparrow-core/sparrow/skills/: __init__.py  file_ops.py  monitor.py  notify.py  registry.py  scheduler.py  shell.py
sparrow-core/tests/: __init__.py  test_health.py
sparrow-web/: index.html  nginx.conf  package.json
sparrow-web/src/: App.vue
sparrow-web/src/assets/: main.css
(+12 files in other folders)
